--- a/app/src/main/res/layout/activity_testitem.xml
+++ b/app/src/main/res/layout/activity_testitem.xml
@@ -113,7 +113,7 @@
                             android:layout_gravity="center"
                             android:layout_marginStart="10dp"
                             android:orientation="horizontal"
-                            android:weightSum="2">
+                            android:weightSum="3">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -137,6 +137,27 @@
                                     android:textSize="15sp" />
                             </LinearLayout>
 
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginEnd="8dp"
+                                    android:gravity="center_horizontal|top"
+                                    android:text="Avg:"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:id="@+id/tv_attempt_avg"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal|top"
+                                    android:textColor="@color/green"
+                                    android:textSize="15sp" />
+                            </LinearLayout>
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -295,7 +316,7 @@
                             android:layout_gravity="center"
                             android:layout_marginStart="10dp"
                             android:orientation="horizontal"
-                            android:weightSum="2">
+                            android:weightSum="3">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -319,6 +340,27 @@
                                     android:textSize="15sp" />
                             </LinearLayout>
 
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginEnd="8dp"
+                                    android:gravity="center_horizontal|top"
+                                    android:text="Avg:"
+                                    android:textSize="15sp" />
+
+                                <TextView
+                                    android:id="@+id/tv_flash_avg"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_horizontal|top"
+                                    android:textColor="@color/green"
+                                    android:textSize="15sp" />
+                            </LinearLayout>
 
                             <LinearLayout
                                 android:layout_width="match_parent"
