--- a/app/src/main/res/layout/activity_enrollitem.xml
+++ b/app/src/main/res/layout/activity_enrollitem.xml
@@ -24,7 +24,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="4">
 
                 <LinearLayout
                     android:layout_width="match_parent"
