--- a/app/src/main/res/layout/app_bar_dash_board.xml
+++ b/app/src/main/res/layout/app_bar_dash_board.xml
@@ -29,6 +29,27 @@
                 android:gravity="end|right"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tv_connection"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp"
+                        android:hint="Connection" />
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        app:srcCompat="@drawable/ic_wifi_24dp"
+                        android:layout_marginStart="5dp"/>
+                </LinearLayout>
+
+
                 <TextView
                     android:id="@+id/tv_studentid"
                     android:layout_width="wrap_content"
